--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -7,7 +7,7 @@
     <title>Hundir la Flota — Simple</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link href=" ../style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
 </head>
 
