Completada la clase Board.js, modificado el main.js, modificado index.html y añadido pruebaTablero.html para probar la creación del tablero.

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -239,10 +239,10 @@
                     </section>
 
                     <!-- JS del juego -->
-                    <script src="../core/Board.js"></script>
-                    <script src="../core/Game.js"></script>
-                    <script src="../core/Ship.js"></script>
-                    <script src="../../js/main.js"></script>
+                    <script src="js/core/Board.js"></script>
+                    <script src="js/core/Game.js"></script>
+                    <script src="js/core/ScoreManager.js"></script>
+                    <script src="js/main.js"></script>
 
                 </body>
 
