completado Board.js, boardRenderer.js, main.js e index.html

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -240,8 +240,8 @@
 
                     <!-- JS del juego -->
                     <script src="js/core/Board.js"></script>
+                    <script src="js/dom/boardRenderer.js"></script>
                     <script src="js/core/Game.js"></script>
-                    <script src="js/core/ScoreManager.js"></script>
                     <script src="js/main.js"></script>
 
                 </body>
