--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -184,10 +184,10 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
     <!-- Orden correcto -->
-    <script src="assets/js/core/Board.js"></script>
-    <script src="assets/js/dom/boardRenderer.js"></script>
-    <script src="assets/js/dom/efectManager.js"></script>
-    <script src="assets/js/core/Game.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="./js/core/Board.js"></script>
+    <script src="./js/dom/boardRenderer.js"></script>
+    <script src="./js/dom/efectManager.js"></script>
+    <script src="./js/core/Game.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
