--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Hundir la Flota — Simple</title>
+
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,7 +14,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-      <link rel="stylesheet" href="assets/style.css">
+
+    <!-- Estilos personalizados -->
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
 
   <body>
@@ -34,159 +38,77 @@
         <div id="nav" class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto gap-2">
             <li class="nav-item">
-              <a class="nav-link" href="#tableros">Tableros</a>
+              <a class="nav-link" href="#enemyBoard">Tablero</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#marcador">Marcador</a>
-            </li>
-            <li class="nav-item">
-              <button id="themeBtn" class="btn btn-sm btn-outline-info">
-                <i class="bi bi-moon-stars"></i> Tema
-              </button>
+              <a class="nav-link" href="#ranking">Ranking</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- HERO -->
-    <section class="hero py-4">
-      <div class="wrap hero-flex">
-        <div class="hero-text">
-          <h1 class="h2 fw-bold">Estrategia y precisión</h1>
-          <p class="text-secondary mb-3">
-            Dispara en el tablero enemigo. Gestiona tu flota en el tuyo.
-          </p>
-
-          <div class="d-flex gap-2">
-            <button id="btnJugar" class="btn btn-info btn-lg">
-              <i class="bi bi-play-circle me-1"></i> Jugar
-            </button>
-
-            <button
-              class="btn btn-outline-light btn-lg"
-              data-bs-toggle="modal"
-              data-bs-target="#configModal"
-            >
-              <i class="bi bi-gear me-1"></i> Configurar
-            </button>
-          </div>
+    <!-- HERO PRINCIPAL -->
+    <section class="hero py-5">
+      <div class="wrap hero-flex align-items-center justify-content-center">
+        <!-- Texto a la izquierda -->
+        <div class="hero-text me-5">
+          <h1 class="display-5 fw-bold mb-3 text-info">Hundir La Flota</h1>
         </div>
 
-        <div class="card-lite">
-          <h3 class="h6 mb-2">Tablero enemigo</h3>
-          <div id="enemyBoard" class="board" style="--size: 10"></div>
+        <!-- Tablero centrado con botones -->
+        <div class="card-lite text-center mx-auto position-relative">
+          <!-- Botones en esquinas -->
+          <button
+            id="btnJugar"
+            class="btn btn-info btn-lg position-absolute top-0 start-0 m-3"
+          >
+            <i class="bi bi-play-circle me-1"></i> Jugar
+          </button>
+
+          <button
+            id="btnReiniciar"
+            class="btn btn-info btn-lg position-absolute top-0 end-0 m-3"
+          >
+            <i class="bi bi-arrow-repeat me-1"></i> Reiniciar
+          </button>
+
+          <!-- Título -->
+          <h3 class="h5 text-info mb-3 mt-5">
+            Dispara en el enemigo y demuestra tu puntería.
+          </h3>
+
+          <!-- Marcador centrado -->
+          <div
+            id="marcador"
+            class="marcador d-flex justify-content-center gap-4 mb-4"
+          >
+            <span>Disparos: <strong id="shots">0</strong></span>
+            <span>Aciertos: <strong id="hits">0</strong></span>
+            <span>Fallos: <strong id="misses">0</strong></span>
+          </div>
+
+          <!-- Tablero enemigo -->
+          <div
+            id="enemyBoard"
+            class="board board-large"
+            style="--size: 10"
+          ></div>
         </div>
       </div>
     </section>
 
-    <!-- TABLEROS -->
-    <section id="tableros" class="py-4">
-      <div class="wrap boards-flex">
-        <div class="card-lite">
-          <div class="d-flex justify-content-between align-items-center mb-2">
-            <h2 class="h5 m-0">Tu tablero</h2>
-
-            <div class="btn-group">
-              <button id="btnColocar" class="btn btn-outline-info btn-sm">
-                <i class="bi bi-grid-3x3"></i> Colocar flota
-              </button>
-              <button id="btnReiniciar" class="btn btn-outline-light btn-sm">
-                <i class="bi bi-arrow-repeat"></i> Reiniciar
-              </button>
-            </div>
-          </div>
-
-          <div id="playerBoard" class="board" style="--size: 10"></div>
-        </div>
-
-        <aside id="marcador" class="card-lite side">
-          <h2 class="h6">Marcador</h2>
-
-          <ul class="list-group list-group-flush">
-            <li
-              class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-center border-0 border-bottom"
-            >
-              Disparos
-              <span id="shots" class="badge text-bg-info rounded-pill">0</span>
-            </li>
-            <li
-              class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-center border-0 border-bottom"
-            >
-              Aciertos
-              <span id="hits" class="badge text-bg-success rounded-pill"
-                >0</span
-              >
-            </li>
-            <li
-              class="list-group-item bg-transparent text-white d-flex justify-content-between align-items-center border-0"
-            >
-              Fallos
-              <span id="misses" class="badge text-bg-secondary rounded-pill"
-                >0</span
-              >
-            </li>
-          </ul>
-        </aside>
-      </div>
-    </section>
-
-    <!-- MODAL -->
-    <div class="modal fade" id="configModal" tabindex="-1" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content card-lite">
-          <div class="modal-header">
-            <h5 class="modal-title">Configuración</h5>
-            <button class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-
-          <div class="modal-body">
-            <label class="form-label">Tamaño del tablero</label>
-            <select id="sizeSelect" class="form-select mb-3">
-              <option value="10" selected>10 x 10</option>
-              <option value="12">12 x 12</option>
-              <option value="8">8 x 8</option>
-            </select>
-
-            <div class="form-check">
-              <input
-                id="fxCheck"
-                class="form-check-input"
-                type="checkbox"
-                checked
-              />
-              <label class="form-check-label" for="fxCheck"
-                >Efectos visuales</label
-              >
-            </div>
-          </div>
-
-          <div class="modal-footer">
-            <button class="btn btn-info" data-bs-dismiss="modal">
-              Guardar
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- RANKING -->
-    <section id="ranking" class="container card-lite">
+    <!-- Ranking -->
+    <section id="ranking" class="container card-lite my-5">
       <h2 class="h6 text-info">Ranking</h2>
       <div id="rankingList"></div>
     </section>
 
-    <!-- Confetti -->
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-
-    <!-- JS del juego -->
-    <!-- CDN confetti -->
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-<!-- Primero las dependencias -->
-<script src="assets/js/core/Board.js"></script>
-  <script src="assets/js/core/Game.js"></script>
-  <script src="assets/js/core/ScoreManager.js"></script>
-  <script src="assets/js/dom/boardRenderer.js"></script>
-  <script src="assets/js/main.js"></script>
-
+    <!-- Scripts del juego -->
+    <script src="assets/js/core/Board.js"></script>
+    <script src="assets/js/core/Game.js"></script>
+    <script src="assets/js/core/ScoreManager.js"></script>
+    <script src="assets/js/dom/boardRenderer.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
