--- a/public/index.html
+++ b/public/index.html
@@ -67,10 +67,10 @@
           </button>
 
           <button
-            id="btnReiniciar"
+            id="btnAbandonar"
             class="btn btn-info btn-lg position-absolute top-0 end-0 m-3"
           >
-            <i class="bi bi-arrow-repeat me-1"></i> Reiniciar
+            <i class="bi bi-door-closed me-1"></i> Abandonar Partida
           </button>
 
           <!-- Título -->
