--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
       rel="stylesheet"
     />
-
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <style>
       body {
         background-color: #0b0f14;
@@ -46,6 +46,25 @@
         border-radius: 6px;
         aspect-ratio: 1 / 1;
         border: 1px solid #223245;
+      }
+      .cell.water {
+        background-color: #0f1620;
+        border-color: #223245;
+      }
+
+      .cell.hit {
+        background-color: #2b3a50;
+        border-color: pink;
+      }
+
+      .cell.miss {
+        background-color: #1b2a3d;
+        border-color: #6ea8fe;
+      }
+
+      .cell.ship {
+        background-color: #112431;
+        border-color: #1b405a;
       }
     </style>
   </head>
@@ -148,6 +167,8 @@
 
     <!-- Scripts del juego -->
     <script src="assets/js/core/Board.js"></script>
+    <script src="assets/js/dom/EffectsManager.js"></script>
+
     <script src="assets/js/core/Game.js"></script>
     <script src="assets/js/core/ScoreManager.js"></script>
     <script src="assets/js/dom/boardRenderer.js"></script>
