--- a/public/index.html
+++ b/public/index.html
@@ -158,6 +158,11 @@
       </div>
     </section>
 
+    <button id="clearRanking" class="btn btn-sm btn-outline-danger mt-3">
+      <i class="bi bi-arrow-repeat me-1"></i>
+      Borrar ranking
+    </button>
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
