ajuste de botón

--- a/public/index.html
+++ b/public/index.html
@@ -156,12 +156,11 @@
         <h2 class="h5 text-info mb-3">Ranking</h2>
         <div id="rankingList">Sin partidas registradas.</div>
       </div>
-    </section>
 
-    <button id="clearRanking" class="btn btn-sm btn-outline-danger mt-3">
-      <i class="bi bi-arrow-repeat me-1"></i>
-      Borrar ranking
-    </button>
+      <button id="clearRanking" class="btn btn-outline-danger mt-3 d-block mx-auto">
+        Borrar ranking
+      </button>
+    </section>
 
     <!-- Bootstrap JS -->
     <script
